<resources>

    <string name="add_guardian">Add Guardian</string>
    <string name="address">Address</string>
    <string name="allow">Allow</string>
    <string name="full_address">7609 Tangerine Knoll Loop Winter Garden, FL 34787</string>
    <string name="app_name">Riding Tracker</string>
    <string name="bandfrog15">Bandfrog15</string>
    <string name="cancel">Cancel</string>
    <string name="contacts_error_dialogue">You have denied the Import Conditions Permission. Manual entry of guardians is required unless permission is approved.</string>
    <string name="deny">Deny</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="current_ride">Current Ride</string>
    <string name="delete">Delete</string>
    <string name="delete_guardian_title">Delete Guardian?</string>
    <string name="delete_guardian_message">Would you like to Delete this Guardian?</string>
    <string name="edit_guardian_title">Edit Selected Guardian</string>
    <string name="edit_guardian_message">Would you like to edit the selected Guardian?</string>
    <string name="edit_profile">Create Profile</string>
    <string name="email">Email</string>
    <string name="email_missing">Email Address is Missing</string>
    <string name="import_contact_error">Import Contact Error</string>
    <string name="import_contact_error_dialogue">There was an error in importing your contact. Please check the contact for Name, Phone Number, and Email. Thank you.</string>
    <string name="location_permission_error_title">Location Permissions Error</string>
    <string name="location_permission_error_message">In order to use the map feature in this app, the location permissions must be accepted.</string>
    <string name="next">Next</string>
    <string name="no_email_address">There is no email address for this contact. It is not required however it will not allow an emergency email to be sent.</string>
    <string name="previous">Previous</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="guardians">Guardians</string>
    <string name="guardian_email">Guardian Email</string>
    <string name="guardian_name">Guardian Name</string>
    <string name="guardian_phone_number">Guardian Phone Number</string>
    <string name="hello_first_fragment">Riding Tracker</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="import_contact">Import Contact</string>
    <string name="kellie_hale">Kellie Hale</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="notify_all_guardians">Notify All Guardians</string>
    <string name="ok">OK</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="phone">Phone Number</string>
    <string name="phone_number">9495773860</string>
    <string name="previous_rides">Previous Rides</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="second_fragment_label">Second Fragment Label</string>
    <string name="title_activity_menu">Menu</string>
    <string name="yes">Yes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Map Options Strings -->
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="getcurrentlocation">getCurrentLocation</string>
    <!--About Menu Item-->
    <string name="about">About</string>
    <string name="about_title">How to Use the App</string>
    <string name="about_message">Users can create a profile, Import Contacts/Create New Contacts(Guardians), and send SOS messages to selected Guardians should you get in trouble.</string>
    <string name="sos">SOS</string>
    <string name="start_ride">Start Ride</string>
    <string name="finish_ride">Finish Ride</string>
    <string name="feature_not_available">Feature Not Yet Available</string>
    <string name="news">News</string>
    <string name="welcome_to_riding_tracker">Welcome to Riding Tracker!</string>
    <string name="safe_ride">Your app for a safe ride</string>
    <string name="login">Login</string>
    <string name="rider">rider</string>


</resources>