<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/currentRideFragment"
        android:icon="@android:drawable/ic_dialog_map"
        android:iconTint="#FFFFFF"
        android:title="@string/current_ride"
        android:visible="true" />
    <item
        android:id="@id/previousRidesFragment"
        android:checkable="false"
        android:checked="false"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:iconTint="#FFFFFF"
        android:title="@string/previous_rides"
        android:visible="true"
        app:showAsAction="withText" />
    <item
        android:id="@id/guardiansFragment"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_add"
        android:iconTint="#FFFFFF"
        android:title="@string/guardians"
        app:showAsAction="withText" />
    <item
        android:id="@id/profileFragment"
        android:checked="false"
        android:enabled="true"
        android:icon="@android:drawable/gallery_thumb"
        android:iconTint="@color/white"
        android:title="@string/profile"
        app:showAsAction="withText" />
    <item
        android:id="@id/settingsFragment"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_manage"
        android:iconTint="#FFFFFF"
        android:title="@string/settings"
        android:visible="true"
        app:showAsAction="withText" />
</menu>